--- a/server/config/.env
+++ b/server/config/.env
@@ -7,6 +7,8 @@ DB_USER_PASSWORD ==NodeJsONLY
 # Port
 SERVER_PORT = 4000
 
+#HASH
+PASSWORD_HASH_SALT_ROUNDS = 3
 
 # Local Host
 LOCAL_HOST = http://localhost:3000
