Session Storage implemented
Implemented the accessLevels for guest user and admin into the project

--- a/server/config/.env
+++ b/server/config/.env
@@ -6,6 +6,11 @@ DB_USER_NAME =Thinkers
 DB_USER_PASSWORD ==NodeJsONLY
 # Port
 SERVER_PORT = 4000
+# Access Levels
+ACCESS_LEVEL_GUEST = 0
+ACCESS_LEVEL_NORMAL_USER = 1
+ACCESS_LEVEL_ADMIN = 2
+
 
 #HASH
 PASSWORD_HASH_SALT_ROUNDS = 3
