--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express-session": "^1.18.0",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "8.5.1",
     "node-sass": "^9.0.0"
   }
 }
