Adding the ability to add a photo to products and displaying products on MainPage
Allowing the admin to add multiple photos when creating a product, displaying photos on the main page and fixing up the tshirt json to match database.

--- a/server/config/.env
+++ b/server/config/.env
@@ -21,3 +21,4 @@ PASSWORD_HASH_SALT_ROUNDS = 3
 LOCAL_HOST = http://localhost:3000
 
 TSHIRT_FILES_FOLDER=./tshirts-images
+MAX_NUMBER_OF_UPLOAD_FILES_ALLOWED=3
