Setting up Atlas
Setting up the mongo atlas for the project

--- a/server/config/.env
+++ b/server/config/.env
@@ -3,7 +3,7 @@
 # Database
 DB_NAME = CA2_Database
 DB_USER_NAME =Thinkers
-DB_USER_PASSWORD ==NodeJsONLY
+DB_USER_PASSWORD =NodeJsONLY
 # Port
 SERVER_PORT = 4000
 # Access Levels
